samples/_failures_safe/1761537972_48962c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cedde6d.c: In function ‘main’:
./samples/SAFE/__tmp_5cedde6d.c:146:26: error: missing terminating " character
  146 |     int rows2 = read_int("\nEnter rows for matrix
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5cedde6d.c:146:5: error: expected expression at end of input
  146 |     int rows2 = read_int("\nEnter rows for matrix
      |     ^~~
./samples/SAFE/__tmp_5cedde6d.c:146:17: error: too few arguments to function ‘read_int’
  146 |     int rows2 = read_int("\nEnter rows for matrix
      |                 ^~~~~~~~
./samples/SAFE/__tmp_5cedde6d.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_5cedde6d.c:146:5: error: expected declaration or statement at end of input
  146 |     int rows2 = read_int("\nEnter rows for matrix
      |     ^~~
